@@ -52,6 +52,7 @@ CHANGELOG Roundcube Webmail
 - Archive: Fix archiving by sender address on cyrus-imap
 - Archive: Style Archive folder also on folder selector and folder manager lists
 - Archive: Add Thunderbird compatible Month option (#5623)
+- Archive: Create archive folder automatically if it's configured, but does not exist (#6076)
 - Return "401 Unauthorized" status when login fails (#5663)
 - Support both comma and semicolon as recipient separator, drop recipients_separator option (#5092)
 - Plugin API: Added 'show_bytes' hook (#5001)
